# RayTracer

./: CMakeLists.txt  README.md  Vector.cpp  Vector.h  main.cpp
src/: Camera.cpp  Camera.h  LightIntensity.cpp  LightIntensity.h  Material.cpp  Material.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  UUIDGenerator.cpp  UUIDGenerator.h  Vector.cpp  Vector.h  Vector3.cpp  Vector3.h  main.cpp
src/camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/geometry/: Intersection.cpp  Intersection.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h
src/image/: BitmapImage.cpp  BitmapImage.h  Image.cpp  Image.h  bitmap_image.hpp
src/io/image/: BitmapImage.cpp  BitmapImage.h  Image.cpp  Image.h
src/io/mesh/: MeshLoader.h  OBJLoader.cpp  OBJLoader.h
src/light/: Light.cpp  Light.h  LightIntensity.cpp  LightIntensity.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h  Texture.cpp  Texture.h
src/lighting/: Light.h
src/static/: Settings.hpp  StringUtils.cpp  StringUtils.h
